<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_sixteen"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="@dimen/margin_sixteen"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:background="@drawable/edit_text_border"
        android:layout_alignParentTop="true"
        android:inputType="number"
        android:padding="@dimen/padding_eight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:text="@string/button_one"
                android:id="@+id/button_one"
                android:onClick="operationFunction"
                style="@style/button_style" />

            <Button
                android:id="@+id/button_two"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_3" />

            <Button
                android:id="@+id/button_division"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_division"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_four"
                style="@style/button_style"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/button_five"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button_six"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_minus" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"

            android:orientation="horizontal">

            <Button
                android:id="@+id/button_seven"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/button_plus"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_clear" />

            <Button
                android:id="@+id/button_zero"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/button_dot"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/button_equals"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:layout_marginRight="@dimen/margin_eight"
                android:text="@string/button_equals" />
        </LinearLayout>



    </LinearLayout>


</RelativeLayout>